# tictactoe-c-sdl2

./: .clang-format  CMakeLists.txt  Makefile  README.md  font.c  font.h  game.h  logic.c  logic.h  main.c  render.c  render.h
